--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,15 @@
-apply plugin:'java'
-
+group 'net.eclionast'
 version '1.3'
+
+apply plugin: 'java'
+
+sourceCompatibility = 1.8
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:2.+"
+}
