tries the codecov's travis conf example
cf https://github.com/codecov/example-gradle/blob/65f88382659cf17c8693c3079941a12c8d004f03/.travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: java
+sudo: false
 jdk:
   - oraclejdk8
 
 before_install:
   - sudo apt-get update && sudo apt-get install oracle-java8-installer
+  - pip install --user codecov
   - java -Xmx32m -version
 
 addons:
@@ -16,6 +18,7 @@ addons:
 script:
   - sonar-scanner
 
+bundler_args: --retry 5
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - codecov
