--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,12 @@ addons:
     branches:
       - dev
 script:
-  - if [ -e ./gradlew ]; then ./gradlew jacocoTestReport;else gradle jacocoTestReport;fi
   - sonar-scanner -D sonar.language=Java
+
+test:
+  post:
+    - if [ -e ./gradlew ]; then ./gradlew jacocoTestReport;else gradle jacocoTestReport;fi
+    - codecov
 
 bundler_args: --retry 5
 
-after_success:
-  - codecov
