--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,9 @@ addons:
 script:
   - sonar-scanner
 
-test:
-  post:
-    - if [ -e ./gradlew ]; then ./gradlew jacocoTestReport;else gradle jacocoTestReport;fi
-    - codecov
+after_success:
+  - if [ -e ./gradlew ]; then ./gradlew jacocoTestReport;else gradle jacocoTestReport;fi
+  - codecov
 
 bundler_args: --retry 5
 
