adds sonarqube jacoco report path.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,3 +3,4 @@ sonar.projectName=JFX DAE Importer
 
 sonar.sources=.
 sonar.language=java
+sonar.jacoco.reportPath=${project.buildDir}/jacoco/test.exec
