--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,10 @@ version '1.3'
 apply plugin: 'java'
 apply plugin: 'jacoco'
 
+configurations {
+    codacy
+}
+
 buildscript {
     repositories {
         maven {
@@ -24,6 +28,7 @@ repositories {
 }
 
 dependencies {
+    codacy 'com.github.codacy:codacy-coverage-reporter:1.0.13'
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:2.+"
 }
@@ -40,6 +45,17 @@ sonarqube {
         property "sonar.projectName", "JFX DAE Importer"
         property "sonar.projectKey", "eclion:jfx-dae-importer"
     }
+}
+
+task sendCoverageToCodacy(type: JavaExec, dependsOn: jacocoTestReport) {
+    main = "com.codacy.CodacyCoverageReporter"
+    classpath = configurations.codacy
+    args = [
+            "-l",
+            "Java",
+            "-r",
+            "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
+    ]
 }
 
 check.dependsOn jacocoTestReport
